tests/test_files_pa3/errors/SymbolTablesScopeCheckTest.ic
class A {
	
	int var;	
	
	void foo() {
		a = 3;
		
		b = 5;
		
		int b;
		
		var = 7;
	}
	
	void bar() {
		foo = 3;
	}
	
	static void one() {
		this.var = 3;
	
		var = 3;
	}
	
	void two() {
		this.var = 3;
		this.nothere = 5;
		
		this.one = 5;
	}
	
	void three() {
		A.notthere(100);
		A.two();
		A.var();
	}
	
	void four() {
		int three;
		string notAMethod;
		three();
		
		undefined(1,2,3);
		one();
		notAMethod();
		var();
	}
	
	static void five() {
		four();
	}
}

class B {
	
	int a;	
	B b;
	
	void c(int d)
	{
		this.a = 5;	
	}
	
	void f(int d)
	{
		this.c(8);
		this.g(13);
		this.e();
		this.a(3);
	}
	
	static void e()
	{
		this.a = 8;
		this.c(8);	
	}
}